--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-SFML
+build/
+*.o
+*.obj
+*.exe
+*.out
+flamesim
+flamesim_debug
 .DS_Store
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+*.a
+*.lib
+*.so
+*.dylib
+*.dll
